--- a/index.html
+++ b/index.html
@@ -12,9 +12,57 @@
   <header class="main-header">
     <h2>Welcome</h2>
     <nav>
-      <i class="fa fa-bars fa-2x"></i>
+      <!-- <i class="fa fa-bars fa-2x"></i> -->
+      <img src="./images/icons/Union.png" alt="union">
     </nav>
   </header>
- 
+  <main class="container">
+      <section class="main-section">
+        <div class="s-container">
+          <h1 class="present">Hey there. I’m Anderson</h1>
+          <h2 class="present">I’m a software developer</h2>
+        </div>
+        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
+        <div class="icons-container">
+          <ul class="social-media-links">
+            <li>
+              <a href="https://twitter.com/BenMukebo">
+                <!-- <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> -->
+                <img src="./images/icons/twitter.png" alt="twitter">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
+                    <!-- <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i> -->
+                <img src="./images/icons/Linkedin icon.png" alt="linkedin">
+              </a>
+            </li>
+            <li>
+                <a href="#">
+                    <!-- <i class="fa fa-medium fa-2x" aria-hidden="true"></i> -->
+                    <img src="./images/icons/medium.png" alt="medium">
+                </a>
+            </li>
+            <li>
+              <a href="https://github.com/BenMukebo">
+                <!-- <i class="fa fa-github fa-2x" aria-hidden="true"></i> -->
+                <img src="./images/icons/github.png" alt="github">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- <i class="fa fa-angellist fa-2x" aria-hidden="true"></i> -->
+                <img src="./images/icons/angellist.png" alt="angellist">
+              </a>
+            </li>
+        </ul>
+        </div>  
+        <div class="scroll-down-icon">
+            <!-- <i class="fa fa-angle-down fa-2x" aria-hidden="true"></i> -->
+            <img src="./images/icons/Disabled.png" alt="scroll-down" />
+        </div>
+      </section>
+
+  </main>
 </body>
 </html>
