Add style.css file and give style to the main-header

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./CSS/style.css" />
 </head>
 <body>
   <header class="main-header">
     <h2>Welcome</h2>
     <nav>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
-      <img src="./images/icons/Union.png" alt="union">
+      <img src="./images/icons/Union.png" class="menu-btn" alt="union">
     </nav>
   </header>
   <main class="container">
       <section class="main-section">
-        <div class="s-container">
+        <div class="main-section-title">
           <h1 class="present">Hey there. I’m Anderson</h1>
           <h2 class="present">I’m a software developer</h2>
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
         <div class="icons-container">
-          <ul class="social-media-links">
+          <ul class="social-media-icons">
             <li>
               <a href="https://twitter.com/BenMukebo">
                 <!-- <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> -->
@@ -58,8 +58,11 @@
         </ul>
         </div>  
         <div class="scroll-down-icon">
+          <a href="#">
             <!-- <i class="fa fa-angle-down fa-2x" aria-hidden="true"></i> -->
-            <img src="./images/icons/Disabled.png" alt="scroll-down" />
+            <img src="./images/icons/Disabled.png" class="fa" alt="scroll-down" />
+              
+          </a>
         </div>
       </section>
 
