--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="container">
       <section class="main-section">
         <div class="main-section-title">
-          <h1 class="present">Hey there. I’m Anderson</h1>
+          <h1 class="present">Hey there. I’m Mukebo</h1>
           <h2 class="present">I’m a software developer</h2>
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
