fixe the linter erro in the html file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>
               <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
                     <!-- <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i> -->
-                <img src="./images/icons/Linkedin icon.png" alt="linkedin">
+                <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
               </a>
             </li>
             <li>
