Complete the whole Works section

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="works-section-title">
           <h2>My Recent Works</h2>
         </div>
-        <div class="works-projects">
-          <article>
-            <img src="#" alt="Project_1">
+        <div class="card-container">
+          <article class="card">
+            <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
@@ -74,8 +74,8 @@
             </ul>
             <button class="btn-project">See Project</button>
           </article>
-          <article>
-            <img src="#" alt="Project_1">
+          <article class="card">
+            <img src="#" alt="">
             <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
@@ -85,8 +85,8 @@
             </ul>
             <button class="btn-project">See Project</button>
           </article>
-          <article>
-            <img src="#" alt="Project_1">
+          <article class="card">
+            <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
@@ -96,8 +96,8 @@
             </ul>
             <button class="btn-project">See Project</button>
           </article>
-          <article>
-            <img src="#" alt="Project_1">
+          <article class="card">
+            <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
@@ -107,8 +107,8 @@
             </ul>
             <button class="btn-project">See Project</button>
           </article>
-          <article>
-            <img src="#" alt="Project_1">
+          <article class="card">
+            <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
@@ -118,8 +118,8 @@
             </ul>
             <button class="btn-project">See Project</button>
           </article>
-          <article>
-            <img src="#" alt="Project_1">
+          <article class="card">
+            <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang">
               <li>Ruby on rails</li>
