Include the About myself section in the html file

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -83,7 +83,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -94,7 +94,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -105,7 +105,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -116,7 +116,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -127,9 +127,53 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button class="btn-project">See Project</button>
+            <button type="button" class="btn-project">See Project</button>
           </article>
         </div>
+      </section>
+      <section class="about-section">
+        <div class="about-main">
+          <h2>About me</h2>
+          <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.</p>
+          <button type="button" class="btn-project">Get My Resume</button>
+        </div>
+        <div>
+          <article class="card">
+            <img src="#" alt="">
+            <h3>Languages</h3>
+            <ul>
+              <li>JavaScript</li>
+              <li>Ruby</li>
+              <li>Html</li>
+              <li>CSS</li>
+            </ul>    
+          </article>
+          <article class="card">
+            <img src="#" alt="">
+            <h3>Frameworks</h3>
+            <ul>
+              <li>Bootstrap</li>
+              <li>Ruby on rails</li>
+              <li>RSpec</li>
+              <li>Capybara</li>
+              <li>Selenium</li>
+            </ul>      
+          </article>
+          <article  class="card">
+            <img src="#" alt="">
+            <h3>Skills</h3>
+            <ul>
+              <li>Codekit</li>
+              <li>GitHub</li>
+              <li>Codepen</li>
+              <li>Gitlab</li>
+              <li>Terminal</li>
+            </ul>   
+          </article>
+          
+        </div>
+        
       </section>
   </main>
 </body>
