--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -83,7 +83,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -94,7 +94,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -105,7 +105,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -116,7 +116,7 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
           <article class="card">
             <img src="#" alt="">
@@ -127,20 +127,22 @@
               <li>JavScript</li>
               <li>html</li>
             </ul>
-            <button type="button" class="btn-project">See Project</button>
+            <button type="button" class="btn-card">See Project</button>
           </article>
         </div>
       </section>
+
+
       <section class="about-section">
-        <div class="about-main">
+        <div class="about">
           <h2>About me</h2>
           <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
             don’t hestiate to contact me.</p>
-          <button type="button" class="btn-project">Get My Resume</button>
+          <button type="button" class="btn-resume">Get My Resume</button>
         </div>
-        <div>
-          <article class="card">
-            <img src="#" alt="">
+        <div class="card-wrapper">
+          <article class="cards">
+            <img src="./images/icons/icon-languages@2x.svg" class="first" alt="languages">
             <h3>Languages</h3>
             <ul>
               <li>JavaScript</li>
@@ -149,8 +151,8 @@
               <li>CSS</li>
             </ul>    
           </article>
-          <article class="card">
-            <img src="#" alt="">
+          <article class="cards">
+            <img src="./images/icons/icon-frameworks@2x.svg" alt="frameworks">
             <h3>Frameworks</h3>
             <ul>
               <li>Bootstrap</li>
@@ -160,8 +162,8 @@
               <li>Selenium</li>
             </ul>      
           </article>
-          <article  class="card">
-            <img src="#" alt="">
+          <article  class="cards">
+            <img src="./images/icons/icon-skills@2x.svg" alt="skills">
             <h3>Skills</h3>
             <ul>
               <li>Codekit</li>
@@ -171,9 +173,7 @@
               <li>Terminal</li>
             </ul>   
           </article>
-          
         </div>
-        
       </section>
   </main>
 </body>
