Fixe linters errors

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         </div>
         <div class="card-wrapper">
           <article class="cards">
-            <img src="./images/icons/icon-languages@2x.svg" class="first" alt="languages">
+            <img src="./images/icons/icon-languages@2x.svg" class="tools-img" alt="languages">
             <h3>Languages</h3>
-            <ul>
+            <ul class="languages">
               <li>JavaScript</li>
               <li>Ruby</li>
               <li>Html</li>
@@ -152,9 +152,9 @@
             </ul>    
           </article>
           <article class="cards">
-            <img src="./images/icons/icon-frameworks@2x.svg" alt="frameworks">
+            <img src="./images/icons/icon-frameworks@2x.svg" class="tools-img" alt="frameworks">
             <h3>Frameworks</h3>
-            <ul>
+            <ul class="languages">
               <li>Bootstrap</li>
               <li>Ruby on rails</li>
               <li>RSpec</li>
@@ -163,9 +163,9 @@
             </ul>      
           </article>
           <article  class="cards">
-            <img src="./images/icons/icon-skills@2x.svg" alt="skills">
+            <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
             <h3>Skills</h3>
-            <ul>
+            <ul class="languages">
               <li>Codekit</li>
               <li>GitHub</li>
               <li>Codepen</li>
