Change the article tags in li and use ul list like card wrapper for all the li in About section

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             don’t hestiate to contact me.</p>
           <button type="button" class="btn-resume">Get My Resume</button>
         </div>
-        <div class="card-wrapper">
-          <article class="cards">
+        <ul class="card-wrapper">
+          <li class="cards">
             <img src="./images/icons/icon-languages@2x.svg" class="tools-img" alt="languages">
             <h3>Languages</h3>
             <ul class="languages">
@@ -148,8 +148,8 @@
               <li>Html</li>
               <li>CSS</li>
             </ul>    
-          </article>
-          <article class="cards">
+          </li>
+          <li class="cards">
             <img src="./images/icons/icon-frameworks@2x.svg" class="tools-img" alt="frameworks">
             <h3>Frameworks</h3>
             <ul class="languages">
@@ -159,8 +159,8 @@
               <li>Capybara</li>
               <li>Selenium</li>
             </ul>      
-          </article>
-          <article  class="cards">
+          </li>
+          <li  class="cards">
             <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
             <h3>Skills</h3>
             <ul class="languages">
@@ -170,8 +170,8 @@
               <li>Gitlab</li>
               <li>Terminal</li>
             </ul>   
-          </article>
-        </div>
+          </li>
+        </ul>
       </section>
   </main>
 </body>
