--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./CSS/style.css" />
 </head>
 <body>
-  <header class="main-header">
+  <header class="main-header d-flex flex-center">
     <h2>Welcome</h2>
     <nav>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
@@ -24,7 +24,7 @@
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
         <div class="icons-container">
-          <ul class="social-media-icons">
+          <ul class="social-media-icons d-flex flex-center">
             <li>
               <a href="https://twitter.com/BenMukebo">
                 <img src="./images/icons/twitter.png" alt="twitter">
@@ -58,15 +58,15 @@
           </a>
         </div>
       </section>
-      <section class="works-section">
+      <section class="works-section d-flex">
         <div class="works-section-title">
           <h2>My Recent Works</h2>
         </div>
         <div class="card-container">
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -74,10 +74,10 @@
             </ul>
             <button type="button" class="btn-card">See Project</button>
           </article>
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -85,10 +85,10 @@
             </ul>
             <button type="button" class="btn-card">See Project</button>
           </article>
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -96,10 +96,10 @@
             </ul>
             <button type="button" class="btn-card">See Project</button>
           </article>
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -107,10 +107,10 @@
             </ul>
             <button type="button" class="btn-card">See Project</button>
           </article>
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -118,10 +118,10 @@
             </ul>
             <button type="button" class="btn-card">See Project</button>
           </article>
-          <article class="card">
+          <article class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang">
+            <ul class="program-lang d-flex">
               <li>Ruby on rails</li>
               <li>css</li>
               <li>JavScript</li>
@@ -132,27 +132,27 @@
         </div>
       </section>
       <section class="about-section">
-        <div class="about">
+        <div class="about d-flex flex-center">
           <h2>About me</h2>
           <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
             don’t hestiate to contact me.</p>
           <button type="button" class="btn-resume">Get My Resume</button>
         </div>
-        <ul class="card-wrapper">
-          <li class="cards">
+        <ul class="card-wrapper flex-center">
+          <li class="cards d-flex flex-center">
             <img src="./images/icons/icon-languages@2x.svg" class="tools-img" alt="languages">
             <h3>Languages</h3>
-            <ul class="languages">
+            <ul class="languages d-flex">
               <li>JavaScript</li>
               <li>Ruby</li>
               <li>Html</li>
               <li>CSS</li>
             </ul>    
           </li>
-          <li class="cards">
+          <li class="cards d-flex flex-center">
             <img src="./images/icons/icon-frameworks@2x.svg" class="tools-img" alt="frameworks">
             <h3>Frameworks</h3>
-            <ul class="languages">
+            <ul class="languages d-flex">
               <li>Bootstrap</li>
               <li>Ruby on rails</li>
               <li>RSpec</li>
@@ -160,10 +160,10 @@
               <li>Selenium</li>
             </ul>      
           </li>
-          <li  class="cards">
+          <li  class="cards d-flex flex-center">
             <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
             <h3>Skills</h3>
-            <ul class="languages">
+            <ul class="languages d-flex">
               <li>Codekit</li>
               <li>GitHub</li>
               <li>Codepen</li>
