Update live demo link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h2>My Recent Works</h2>
         </div>
         <div class="card-container">
-          <article class="card d-flex">
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -73,8 +73,8 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
-          <article class="card d-flex">
+          </div>
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -84,8 +84,8 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
-          <article class="card d-flex">
+          </div>
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -95,8 +95,8 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
-          <article class="card d-flex">
+          </div>
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -106,8 +106,8 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
-          <article class="card d-flex">
+          </div>
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -117,8 +117,8 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
-          <article class="card d-flex">
+          </div>
+          <div class="card d-flex">
             <img src="#" alt="">
             <h3>Multi-Post Stories Gain+Glory</h3>
             <ul class="program-lang d-flex">
@@ -128,7 +128,7 @@
               <li>html</li>
             </ul>
             <button type="button" class="btn-card">See Project</button>
-          </article>
+          </div>
         </div>
       </section>
       <section class="about-section">
