Add the contact form in the html file

--- a/index.html
+++ b/index.html
@@ -173,6 +173,56 @@
           </li>
         </ul>
       </section>
+      <footer  class="contact-form-section d-flex flex-center">
+        <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+        <form action="https://formspree.io/f/xnqlovnj" method="post">
+          <div>
+            <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required>
+          </div>
+          <div>
+            <input type="email" id="mail" name="user_email" placeholder="Email-address" required>
+          </div>
+          <div>
+            <textarea id="msg" name="user_message" placeholder="Enter text here" maxlength="500" required></textarea>
+          </div>
+          <div>
+            <button type="submit">Get in touch</button>
+          </div>
+        </form>
+        <div class="icons-container">
+          <ul class="social-media-icons d-flex flex-center">
+            <li>
+              <a href="https://twitter.com/BenMukebo">
+                <img src="./images/icons/twitter.png" alt="twitter">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
+                <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
+              </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./images/icons/medium.png" alt="medium">
+                </a>
+            </li>
+            <li>
+              <a href="https://github.com/BenMukebo">
+                <img src="./images/icons/github.png" alt="github">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/icons/angellist.png" alt="angellist">
+              </a>
+            </li>
+          </ul>
+        </div>  
+        <div>
+          <a href="#">l.benkasmukebo7@gmail.com</a>
+        </div>
+        <div class="footer-ligne"></div>
+      </footer>
   </main>
 </body>
 </html>
