--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="main-section">
         <div class="main-section-title">
           <h1 class="present">Hey there. I’m Mukebo</h1>
-          <h2 class="present">I’m a software developer</h2>
+          <h2 class="present h2-size">I’m a software developer</h2>
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
         <div class="icons-container">
@@ -60,7 +60,7 @@
       </section>
       <section class="works-section d-flex">
         <div class="works-section-title">
-          <h2>My Recent Works</h2>
+          <h2 class="h2-size">My Recent Works</h2>
         </div>
         <div class="card-container">
           <div class="card d-flex">
@@ -133,7 +133,7 @@
       </section>
       <section class="about-section">
         <div class="about d-flex flex-center">
-          <h2>About me</h2>
+          <h2 class="h2-size">About me</h2>
           <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
             don’t hestiate to contact me.</p>
           <button type="button" class="btn-resume">Get My Resume</button>
@@ -175,7 +175,7 @@
       </section>
       <footer  class="contact-form-section d-flex flex-center">
         <div class="form-sub-container">
-          <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+          <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
           <form action="https://formspree.io/f/xnqlovnj" method="post">
             <div>
               <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required>
@@ -184,7 +184,7 @@
               <input type="email" id="mail" name="user_email" placeholder="Email-address" required>
             </div>
             <div>
-              <textarea id="msg" name="user_message" placeholder="Enter text here" rows="5" maxlength="500" required></textarea>
+              <textarea id="msg" name="user_message" placeholder="Enter text here" rows="6" maxlength="500" required></textarea>
             </div>
             <div>
               <button type="submit" class="footer-btn">Get in touch</button>
@@ -222,9 +222,8 @@
           <div class="mail-container">
             <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
           </div>
-          <div class="footer-ligne"></div>
-        </footer>
-      </div>  
+        </div>  
+      </footer>
   </main>
 </body>
 </html>
