Change footer tag to section tag

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </li>
         </ul>
       </section>
-      <footer  class="contact-form-section d-flex flex-center">
+      <section  class="contact-form-section d-flex flex-center">
         <div class="form-sub-container">
           <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
           <form action="https://formspree.io/f/xnqlovnj" method="post">
@@ -223,7 +223,7 @@
             <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
           </div>
         </div>  
-      </footer>
+      </section>
   </main>
 </body>
 </html>
