Add the footer tag after the main tag

--- a/index.html
+++ b/index.html
@@ -190,40 +190,42 @@
               <button type="submit" class="footer-btn">Get in touch</button>
             </div>
           </form>
-          <div class="icons-container">
-            <ul class="social-media-icons d-flex flex-center">
-              <li>
-                <a href="https://twitter.com/BenMukebo">
-                  <img src="./images/icons/twitter.png" alt="twitter">
-                </a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
-                  <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
-                </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <img src="./images/icons/medium.png" alt="medium">
-                  </a>
-              </li>
-              <li>
-                <a href="https://github.com/BenMukebo">
-                  <img src="./images/icons/github.png" alt="github">
-                </a>
-              </li>
-              <li>
+        </div>  
+        <div class="icons-container">
+          <ul class="social-media-icons d-flex flex-center">
+            <li>
+              <a href="https://twitter.com/BenMukebo">
+                <img src="./images/icons/twitter.png" alt="twitter">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
+                <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
+              </a>
+            </li>
+            <li>
                 <a href="#">
-                  <img src="./images/icons/angellist.png" alt="angellist">
+                    <img src="./images/icons/medium.png" alt="medium">
                 </a>
-              </li>
-            </ul>
-          </div>  
-          <div class="mail-container">
-            <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
-          </div>
+            </li>
+            <li>
+              <a href="https://github.com/BenMukebo">
+                <img src="./images/icons/github.png" alt="github">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/icons/angellist.png" alt="angellist">
+              </a>
+            </li>
+          </ul>
         </div>  
       </section>
+      <footer>
+        <div class="mail-container">
+          <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
+        </div> 
+      </footer>
   </main>
 </body>
 </html>
