Add some media queries to the two first sections (header-section  and main-session)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <header class="main-header d-flex flex-center">
     <h2>Welcome</h2>
     <nav>
+      <ul class="nav-menu d-flex flex-center">
+        <li>Portoflio</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
     </nav>
@@ -19,7 +24,7 @@
   <main class="container">
       <section class="main-section">
         <div class="main-section-title">
-          <h1 class="present">Hey there. I’m Mukebo</h1>
+          <h1 class="present">Hey there. I’m Mukebo.</h1>
           <h2 class="present h2-size">I’m a software developer</h2>
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
