--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <h2>Welcome</h2>
     <nav class="d-flex">
       <ul class="nav-menu d-flex flex-center">
-        <li><a href="#">Portoflio</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#section-home">Portoflio</a></li>
+        <li><a href="#section-about">About</a></li>
+        <li><a href="#section-contact">Contact</a></li>
       </ul>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
     </nav>
   </header>
   <main class="container">
-      <section class="main-section">
+      <section class="main-section" id="section-home">
         <div class="main-section-title">
           <h1 class="present h2-size">Hey there. I’m Mukebo.</h1>
           <h2 class="present h2-size">I’m a software developer</h2>
@@ -136,7 +136,7 @@
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <section class="about-section" id="section-about">
         <div class="about d-flex flex-center">
           <h2 class="h2-size">About me</h2>
           <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
@@ -178,7 +178,7 @@
           </li>
         </ul>
       </section>
-      <section  class="contact-form-section d-flex flex-center">
+      <section  class="contact-form-section d-flex flex-center" id="section-contact">
         <div class="form-sub-container">
           <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
           <form action="https://formspree.io/f/xnqlovnj" method="post">
