--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h2>Welcome</h2>
     <nav class="d-flex">
       <ul class="nav-menu d-flex flex-center">
-        <li><a href="#section-home">Portoflio</a></li>
-        <li><a href="#section-about">About</a></li>
-        <li><a href="#section-contact">Contact</a></li>
+        <li class="nav-link active"><a href="#section-about">About</a></li>
+        <li class="nav-link"><a href="#section-contact">Contact</a></li>
+        <li class="nav-link"><a href="#section-home">Portoflio</a></li>
       </ul>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
