Add Comments at the beginning of all sections for accessibility purposes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +18,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="./CSS/style.css" />
 </head>
+
 <body>
+
+  <!-- Start of Header -->
+
   <header class="main-header d-flex">
     <h2>Welcome</h2>
     <nav class="d-flex">
@@ -30,6 +35,9 @@
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
     </nav>
   </header>
+
+  <!-- General container of all sections -->
+
   <main class="container">
       <section class="main-section" id="section-home">
         <div class="main-section-title">
@@ -72,6 +80,8 @@
           </a>
         </div>
       </section>
+      <!-- Start of cards or grid section -->
+
       <section class="works-section d-flex">
         <div class="works-section-title">
           <h2 class="h2-size">My Recent Works</h2>
@@ -145,6 +155,8 @@
           </div>
         </div>
       </section>
+      <!-- Start of About me section -->
+
       <section class="about-section" id="section-about">
         <div class="about d-flex flex-center">
           <h2 class="h2-size">About me</h2>
@@ -187,6 +199,8 @@
           </li>
         </ul>
       </section>
+      <!-- Start of Contact form Section -->
+      
       <section  class="contact-form-section d-flex flex-center" id="section-contact">
         <div class="form-sub-container">
           <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
