--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
+<script async src="https://www.googleMukebotagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -33,8 +33,8 @@
   <main class="container">
       <section class="main-section" id="section-home">
         <div class="main-section-title">
-          <h1 class="present h2-size">Hey there. I’m Mukebo.</h1>
-          <h2 class="present h2-size">I’m a software developer</h2>
+          <h1 class="h2-size">Hey there. I’m Mukebo.</h1>
+          <h2 class="h2-size">I’m a software developer</h2>
         </div>
         <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
         <div class="icons-container">
