Add eventlistener mobile menu

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </ul>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
+      <img src="./images/icons/Icon.png" class="closed-menu-btn" alt="">
     </nav>
   </header>
   <main class="container">
@@ -231,5 +232,6 @@
         </div> 
       </footer>
   </main>
+  <script src="./js/menu.js"></script>
 </body>
 </html>
